<resources>
    <string name="app_name">FirebaseListeners</string>
    <string name="na">NA</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="some_thing_went_wrong">Some thing went wrong</string>
    <string name="emp_name">Employee Name</string>
    <string name="emp_name_error">Enter Employee Name</string>
    <string name="designation">Designation</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_location">Branch Location</string>
    <string name="branch_id">Branch Id</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
</resources>
